--- a/src/components/employee/EmployeeList.css
+++ b/src/components/employee/EmployeeList.css
@@ -2,6 +2,8 @@
     /* display: flex; */
     margin: 10px;
     padding: 10px;
+    margin-top: 40px;
+    padding-top: 30px;
     background-color: whitesmoke;
     justify-content: space-around;
     flex-direction: row;
